# Portfolio

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py
src/styles/: main.css
